@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/kcmgrunlevel
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/kcmgrunlevel/Attic/ChangeLog,v 1.4 2005/07/22 09:24:28 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/kcmgrunlevel/Attic/ChangeLog,v 1.5 2005/10/12 13:52:17 greg_g Exp $
+
+  12 Oct 2005; Gregorio Guidi <greg_g@gentoo.org> kcmgrunlevel-0.2.ebuild:
+  Cleanup. Fix installation directory for icons.
 
   22 Jul 2005; David Holm <dholm@gentoo.org> kcmgrunlevel-0.2.ebuild:
   Added to ~ppc.
